--- a/second_page.html
+++ b/second_page.html
@@ -184,7 +184,7 @@ function addTracksToPlaylist() {
         position: 0
     };
 
-    var url = `https://api.spotify.com/v1/playlists/${playlistId}/tracks`;
+    var url = `https://api.spotify.com/v1/playlists/${playlistId}/7yCF65vpc7sUwPjftI0iFb`;
 
     fetch(url, {
         method: 'POST',
