--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             margin: 0;
             padding: 0;
             display: flex;
-            justify-content: center;
+            flex-direction: column;
             align-items: center;
             height: 100vh;
             background-color: #f0f0f0;
@@ -20,10 +20,19 @@
         /* Container style */
         .container {
             text-align: center;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            flex-grow: 1;
         }
 
         /* Heading style */
         h2 {
+            position: absolute;
+            top: 10px;
+            left: 50%;
+            transform: translateX(-50%);
             color: #333;
         }
 
@@ -34,13 +43,17 @@
 
         /* Mood images style */
         .moods {
-            display: flex;
-            justify-content: center;
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-template-rows: repeat(2, 1fr);
             gap: 10px;
-            margin-bottom: 20px;
         }
 
         .mood {
+            width: 100%;
+            height: 100%;
+            max-width: 200px;
+            max-height: 200px;
             filter: grayscale(100%);
             pointer-events: none;
             opacity: 0.5;
@@ -48,6 +61,9 @@
 
         /* Login button style */
         .spotify-login-btn {
+            position: absolute;
+            top: 10px;
+            right: 10px;
             background-color: #1db954;
             color: #fff;
             padding: 10px 20px;
@@ -62,18 +78,16 @@
     </style>
 </head>
 <body>
+    <h2>MoodSwinger</h2>
+    <a href="https://accounts.spotify.com/authorize?client_id=a80fcf0c3aae4aabb6f6b6721183b72e&response_type=token&redirect_uri=https://scripteds.github.io/MoodSwinger/second_page.html&scope=user-read-private%20user-read-email&state=STATE&show_dialog=true" class="spotify-login-btn">Login with Spotify</a>
     <div class="container">
-        <h2>Spotify Login</h2>
-        <p>Select a playlist:</p>
         <div class="moods">
-            <img src="happy.png" alt="Happy" class="mood" width="100" height="100">
-            <img src="sad.png" alt="Sad" class="mood" width="100" height="100">
-            <img src="disgust.png" alt="Disgust" class="mood" width="100" height="100">
-            <img src="fear.png" alt="Fear" class="mood" width="100" height="100">
-            <img src="anger.png" alt="Anger" class="mood" width="100" height="100">
+            <img src="happy.png" alt="Happy" class="mood">
+            <img src="sad.png" alt="Sad" class="mood">
+            <img src="disgust.png" alt="Disgust" class="mood">
+            <img src="fear.png" alt="Fear" class="mood">
+            <img src="anger.png" alt="Anger" class="mood">
         </div>
-        <br><br>
-        <a href="https://accounts.spotify.com/authorize?client_id=a80fcf0c3aae4aabb6f6b6721183b72e&response_type=token&redirect_uri=https://scripteds.github.io/MoodSwinger/second_page.html&scope=user-read-private%20user-read-email&state=STATE&show_dialog=true" class="spotify-login-btn">Login with Spotify</a>
     </div>
 
     <script>
