--- a/index.html
+++ b/index.html
@@ -52,11 +52,21 @@
         .mood {
             width: 100%;
             height: 100%;
-            max-width: 600px;
-            max-height: 600px;
+            max-width: 525px;
+            max-height: 525px;
             filter: grayscale(100%);
             pointer-events: none;
             opacity: 0.5;
+        }
+        
+        .moods .spacer {
+            grid-column: span 1;
+        }
+
+        .moods .centered {
+            grid-column: span 2;
+            display: flex;
+            justify-content: center;
         }
 
         /* Login button style */
@@ -85,8 +95,10 @@
             <img src="happy.png" alt="Happy" class="mood">
             <img src="sad.png" alt="Sad" class="mood">
             <img src="disgust.png" alt="Disgust" class="mood">
+            <div class="spacer"></div>
             <img src="fear.png" alt="Fear" class="mood">
             <img src="anger.png" alt="Anger" class="mood">
+            <div class="spacer"></div>
         </div>
     </div>
 
