--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
             grid-template-columns: repeat(3, 1fr);
             grid-template-rows: repeat(2, 1fr);
             gap: 10px;
+            align-items: center;
+            justify-items: center;
         }
 
         .mood {
@@ -57,6 +59,13 @@
             filter: grayscale(100%);
             pointer-events: none;
             opacity: 0.5;
+        }
+
+        .centered-container {
+            grid-column: span 3;
+            display: flex;
+            justify-content: center;
+            gap: 10px;
         }
 
         /* Login button style */
@@ -85,8 +94,10 @@
             <img src="happy.png" alt="Happy" class="mood">
             <img src="sad.png" alt="Sad" class="mood">
             <img src="disgust.png" alt="Disgust" class="mood">
-            <img src="fear.png" alt="Fear" class="mood">
-            <img src="anger.png" alt="Anger" class="mood">
+            <div class="centered-container">
+                <img src="fear.png" alt="Fear" class="mood">
+                <img src="anger.png" alt="Anger" class="mood">
+            </div>
         </div>
     </div>
 
