--- a/second_page.html
+++ b/second_page.html
@@ -27,25 +27,7 @@
 <button id="logout-button">Logout</button>
 
 <script>
-$(document).ready(function() {
-    // Attach event listener to logout button
-    $("#logout-button").click(function() {
-        // Clear stored results and selected mood
-        sessionStorage.removeItem('searchResults');
-        sessionStorage.removeItem('selectedMood');
-        // Redirect to index.html
-        window.location.href = "https://scripteds.github.io/MoodSwinger/index.html";
-    });
-
-    // Retrieve stored search results and selected mood from sessionStorage
-    const storedResults = sessionStorage.getItem('searchResults');
-    const selectedMood = sessionStorage.getItem('selectedMood');
-
-    if (storedResults && selectedMood) {
-        $('#results').html(storedResults);
-    }
-});
-
+// Function to search songs based on mood
 function searchSongs(mood) {
     // Map moods to Spotify seed genres
     var moodToGenre = {
@@ -84,6 +66,7 @@ function searchSongs(mood) {
     });
 }
 
+// Function to search recommended tracks based on mood and access token
 function searchRecommendedTracks(mood, accessToken, offset = 0, accumulatedTracks = []) {
     // Use Spotify's recommendation API to get recommended tracks based on mood
     var apiUrl = "https://api.spotify.com/v1/recommendations?seed_genres=" + mood + "&limit=7&offset=" + offset;
@@ -119,6 +102,7 @@ function searchRecommendedTracks(mood, accessToken, offset = 0, accumulatedTrack
     });
 }
 
+// Function to display recommended tracks
 function displayResults(mood, tracks) {
     var html = "<h2>Recommended Tracks</h2>";
 
@@ -153,6 +137,13 @@ function displayResults(mood, tracks) {
             '<iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/3exTAYd7fdaGyKQwtgA5MD" width="100%" height="500" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>'
         ]
     };
+
+    // Append the iframes based on mood to the html
+    html += iframes[mood][randomNum];
+
+    // Display the results in the results container
+    $('#results').html(html);
+}
 
 async function addTracksToPlaylist() {
     var playlistId = '7Fn5SdMYGiqLK9rtTfv0OJ';  // Replace with your actual playlist ID
@@ -194,10 +185,24 @@ async function addTracksToPlaylist() {
     }
 }
 
-// Example usage:
-addTracksToPlaylist();
+$(document).ready(function() {
+    // Attach event listener to logout button
+    $("#logout-button").click(function() {
+        // Clear stored results and selected mood
+        sessionStorage.removeItem('searchResults');
+        sessionStorage.removeItem('selectedMood');
+        // Redirect to index.html
+        window.location.href = "https://scripteds.github.io/MoodSwinger/index.html";
+    });
 
+    // Retrieve stored search results and selected mood from sessionStorage
+    const storedResults = sessionStorage.getItem('searchResults');
+    const selectedMood = sessionStorage.getItem('selectedMood');
 
+    if (storedResults && selectedMood) {
+        $('#results').html(storedResults);
+    }
+});
 </script>
 
 </body>
