--- a/second_page.html
+++ b/second_page.html
@@ -147,11 +147,11 @@ function displayResults(mood, tracks) {
 
 async function addTracksToPlaylist() {
     var playlistId = '7Fn5SdMYGiqLK9rtTfv0OJ';  // Replace with your actual playlist ID
-    var token = sessionStorage.getItem('accessToken');  // Use the stored access token
-
+    var token = sessionStorage.getItem('accessToken');
+    
     if (!token) {
-        console.log("Access token not available.");
-        return;
+    console.log("Access token not available.");
+    return;
     }
 
     var trackUris = ["spotify:track:7yCF65vpc7sUwPjftI0iFb"];  // Specific track URI
@@ -162,28 +162,29 @@ async function addTracksToPlaylist() {
 
     var url = `https://api.spotify.com/v1/playlists/${playlistId}/tracks`;
 
-    try {
-        const response = await fetch(url, {
-            method: 'POST',
-            headers: {
-                'Authorization': `Bearer ${token}`,
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify(data)
-        });
+try {
+    // Fetch request to add tracks to playlist
+    const response = await fetch(url, {
+        method: 'POST',
+        headers: {
+            'Authorization': `Bearer ${token}`,
+            'Content-Type': 'application/json'
+        },
+        body: JSON.stringify(data)
+    });
 
-        if (!response.ok) {
-            const error = await response.json();
-            throw new Error(`Error: ${error.error.message}`);
-        }
-
-        const result = await response.json();
-        console.log('Track added to playlist:', result);
-    } catch (error) {
-        console.error('Error adding tracks to playlist:', error);
-        // Additional error handling or logging can be added here
+    if (!response.ok) {
+        const error = await response.json();
+        throw new Error(`Error: ${error.error.message}`);
     }
+
+    const result = await response.json();
+    console.log('Track added to playlist:', result);
+} catch (error) {
+    console.error('Error adding tracks to playlist:', error);
+    // Additional error handling or logging can be added here
 }
+
 
 $(document).ready(function() {
     // Attach event listener to logout button
