--- a/second_page.html
+++ b/second_page.html
@@ -302,24 +302,25 @@
             return accessToken;
         }
 
-        // Function to fetch user profile
-        function fetchUserProfile(accessToken) {
-            $.ajax({
-                url: 'https://api.spotify.com/v1/me',
-                headers: {
-                    'Authorization': 'Bearer ' + accessToken
-                },
-                success: function(response) {
-                    var userName = response.display_name || response.id;
-                    $('#welcome').text('Welcome, ' + userName + '!');
-                    $('#login-button').hide();
-                    $('#second-page').addClass('visible').removeClass('hidden');
-                },
-                error: function(xhr, status, error) {
-                    console.error('Error fetching user profile:', error);
-                }
-            });
+// Function to fetch user profile
+function fetchUserProfile(accessToken) {
+    $.ajax({
+        url: 'https://api.spotify.com/v1/me',
+        headers: {
+            'Authorization': 'Bearer ' + accessToken
+        },
+        success: function(response) {
+            var userName = response.display_name || response.id;
+            $('#welcome').text('Welcome, ' + userName + '!');
+            $('#login-button').hide();
+            $('#second-page').removeClass('hidden').addClass('visible');
+        },
+        error: function(xhr, status, error) {
+            console.error('Error fetching user profile:', error);
         }
+    });
+}
+
 
         // Wait for the DOM to be fully loaded
         $(document).ready(function() {
