--- a/index.html
+++ b/index.html
@@ -84,209 +84,35 @@
         .spotify-login-btn:hover {
             background-color: #1ed760;
         }
-
-        /* Styles for second page */
-        .hidden {
-            display: none;
-        }
-
-        .visible {
-            display: block;
-        }
-
-        .second-page {
-            display: none;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            width: 100%;
-            background-color: #f9f9f9;
-            color: #333;
-            padding: 20px;
-            text-align: center;
-        }
-
-        /* Mood image style */
-        .mood-image {
-            width: 100px;
-            height: 100px;
-            cursor: pointer;
-            border: 2px solid transparent;
-            border-radius: 8px;
-            transition: transform 0.3s, border-color 0.3s;
-        }
-
-        .mood-image:hover {
-            transform: scale(1.1);
-            border-color: #1db954;
-        }
-
-        /* Track details container */
-        .track-details {
-            width: 100%;
-            max-width: 800px;
-            text-align: center;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            margin-bottom: 20px;
-        }
-
-        /* Track title */
-        .track-title {
-            font-size: 24px;
-            font-weight: bold;
-            margin-bottom: 10px;
-        }
-
-        /* Artist name and release year */
-        .artist-release {
-            font-size: 18px;
-            margin-bottom: 20px;
-        }
-
-        /* Spotify embed style */
-        iframe {
-            width: 100%;
-            height: 500px;
-            border: none;
-            border-radius: 8px;
-            margin-bottom: 20px;
-        }
-
-        /* Results container style */
-        #results-container {
-            width: 100%;
-            max-width: 600px;
-            height: 500px;
-            text-align: center;
-            margin-top: 20px;
-        }
-
-        /* Tracks container style */
-        .tracks {
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-        }
-
-        /* Individual track style */
-        .track {
-            padding: 15px;
-            margin: 0 auto;
-            border: 1px solid #ccc;
-            border-radius: 8px;
-            background-color: #fff;
-            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-            width: 100%;
-            max-width: 500px; /* Increased max-width for larger display */
-        }
-
-        .track p {
-            margin: 0;
-            font-size: 16px;
-            font-weight: bold;
-        }
-
-        .track a {
-            display: block;
-            margin-top: 10px;
-            color: #1db954;
-            text-decoration: none;
-            font-size: 14px;
-        }
-
-        .track a:hover {
-            text-decoration: underline;
-        }
-
-        /* Logout button style */
-        #logout-button {
-            display: block;
-            margin: 30px auto;
-            padding: 10px 20px;
-            background-color: #ff3b3b;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s;
-        }
-
-        #logout-button:hover {
-            background-color: #ff5e5e;
-        }
-
-        /* Back button style */
-        #back-button {
-            display: block;
-            margin: 20px auto;
-            padding: 10px 20px;
-            background-color: #555;
-            color: #fff;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-            transition: background-color 0.3s;
-        }
-
-        #back-button:hover {
-            background-color: #777;
-        }
     </style>
 </head>
 <body>
-    <!-- MoodSwinger header -->
     <h2>MoodSwinger</h2>
-
-    <!-- Login button with Spotify -->
-    <a href="https://accounts.spotify.com/authorize?client_id=a80fcf0c3aae4aabb6f6b6721183b72e&response_type=token&redirect_uri=https://scripteds.github.io/MoodSwinger/&scope=user-read-private%20user-read-email%20playlist-modify-public&state=STATE&show_dialog=true" class="spotify-login-btn">Login with Spotify</a>
-
-
-    <!-- Container for mood images -->
+    <a href="https://accounts.spotify.com/authorize?client_id=a80fcf0c3aae4aabb6f6b6721183b72e&response_type=token&redirect_uri=https://scripteds.github.io/MoodSwinger/second_page.html&scope=user-read-private%20user-read-email%20playlist-modify-public&state=STATE&show_dialog=true" class="spotify-login-btn">Login with Spotify</a>
     <div class="container">
         <div class="moods">
-            <!-- Mood images -->
-            <img src="happy.png" alt="Happy" class="mood" data-mood="happy">
-            <img src="sad.png" alt="Sad" class="mood" data-mood="sad">
-            <img src="disgust.png" alt="Disgust" class="mood" data-mood="disgust">
+            <img src="happy.png" alt="Happy" class="mood">
+            <img src="sad.png" alt="Sad" class="mood">
+            <img src="disgust.png" alt="Disgust" class="mood">
             <div class="centered-container">
-                <img src="fear.png" alt="Fear" class="mood" data-mood="fear">
-                <img src="anger.png" alt="Anger" class="mood" data-mood="anger">
+                <img src="fear.png" alt="Fear" class="mood">
+                <img src="anger.png" alt="Anger" class="mood">
             </div>
         </div>
     </div>
 
-    <!-- Second page content -->
-    <div id="second-page" class="second-page hidden">
-        <!-- Heading for second page -->
-        <h1>Spotify API Mood Search</h1>
-
-        <!-- Mood image container -->
-        <div class="image-container">
-            <img src="happy.png" alt="Happy" class="mood-image" onclick="searchSongs('happy')">
-            <img src="sad.png" alt="Sad" class="mood-image" onclick="searchSongs('sad')">
-            <img src="disgust.png" alt="Disgust" class="mood-image" onclick="searchSongs('disgust')">
-            <img src="fear.png" alt="Fear" class="mood-image" onclick="searchSongs('fear')">
-            <img src="anger.png" alt="Anger" class="mood-image" onclick="searchSongs('anger')">
-        </div>
-
-        <!-- Results container -->
-        <div id="results-container">
-            <div id="results"></div>
-        </div>
-
-        <!-- Logout button -->
-        <button id="logout-button" onclick="logout()">Logout</button>
-    </div>
-
-    <!-- Script section -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script>
+        // Check if the URL contains an access token
+        window.addEventListener("load", function() {
+            var accessToken = getAccessTokenFromURL();
+            if (accessToken) {
+                // If access token is present, store it in sessionStorage
+                sessionStorage.setItem('accessToken', accessToken);
+                // Redirect to the main page or perform other actions
+                window.location.href = "https://scripteds.github.io/MoodSwinger/second_page.html";
+            }
+        });
+
         // Function to extract access token from URL
         function getAccessTokenFromURL() {
             var accessToken = null;
@@ -301,106 +127,6 @@
             }
             return accessToken;
         }
-
-        // Function to fetch user profile
-        function fetchUserProfile(accessToken) {
-            $.ajax({
-                url: 'https://api.spotify.com/v1/me',
-                headers: {
-                    'Authorization': 'Bearer ' + accessToken
-                },
-                success: function(response) {
-                    var userName = response.display_name || response.id;
-                    $('#welcome').text('Welcome, ' + userName + '!');
-                    $('#login-button').hide();
-                    $('#second-page').addClass('visible').removeClass('hidden');
-                },
-                error: function(xhr, status, error) {
-                    console.error('Error fetching user profile:', error);
-                }
-            });
-        }
-
-        // Wait for the DOM to be fully loaded
-        $(document).ready(function() {
-            var accessToken = getAccessTokenFromURL();
-
-            if (accessToken) {
-                // If access token is present, store it in localStorage
-                localStorage.setItem('accessToken', accessToken);
-                // Fetch user profile
-                fetchUserProfile(accessToken);
-            } else {
-                // Otherwise, clear any previous access token from localStorage
-                localStorage.removeItem('accessToken');
-            }
-
-            // Attach click event handlers to mood images
-            $('.mood').on('click', function() {
-                var mood = $(this).data('mood');
-                searchSongs(mood);
-            });
-
-            // Function to search songs based on mood
-            window.searchSongs = function(mood) {
-                var accessToken = localStorage.getItem('accessToken');
-                if (accessToken) {
-                    $.ajax({
-                        url: 'https://api.spotify.com/v1/search',
-                        headers: {
-                            'Authorization': 'Bearer ' + accessToken
-                        },
-                        data: {
-                            q: 'mood:' + mood,
-                            type: 'track',
-                            limit: 10
-                        },
-                        success: function(response) {
-                            displayResults(response.tracks.items);
-                        },
-                        error: function(xhr, status, error) {
-                            console.error('Error searching songs:', error);
-                        }
-                    });
-                } else {
-                    console.error('Access token not found.');
-                }
-            };
-
-            // Function to display search results
-            function displayResults(tracks) {
-                var resultsContainer = $('#results');
-                resultsContainer.empty();
-
-                if (tracks.length > 0) {
-                    var tracksHTML = '<div class="tracks">';
-                    tracks.forEach(function(track) {
-                        var artists = track.artists.map(function(artist) {
-                            return artist.name;
-                        }).join(', ');
-                        var trackHTML = `
-                            <div class="track">
-                                <p>${track.name}</p>
-                                <p class="artist-release">${artists} (${track.album.release_date.split('-')[0]})</p>
-                                <iframe src="https://open.spotify.com/embed/track/${track.id}" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-                                <a href="${track.external_urls.spotify}" target="_blank">Open in Spotify</a>
-                            </div>
-                        `;
-                        tracksHTML += trackHTML;
-                    });
-                    tracksHTML += '</div>';
-                    resultsContainer.append(tracksHTML);
-                } else {
-                    resultsContainer.text('No tracks found.');
-                }
-            }
-
-            // Function to logout
-            window.logout = function() {
-                localStorage.removeItem('accessToken');
-                window.location.href = 'index.html';
-            };
-        });
     </script>
 </body>
 </html>
