--- a/second_page.html
+++ b/second_page.html
@@ -146,15 +146,15 @@ function displayResults(mood, tracks) {
 }
 
 async function addTracksToPlaylist() {
-    var playlistId = '7Fn5SdMYGiqLK9rtTfv0OJ';  // Replace with your actual playlist ID
-    var token = sessionStorage.getItem('accessToken');  // Use the stored access token
+    var playlistId = '7Fn5SdMYGiqLK9rtTfv0OJ';
+    var token = sessionStorage.getItem('accessToken');
 
     if (!token) {
         console.log("Access token not available.");
         return;
     }
 
-    var trackUris = ["spotify:track:7yCF65vpc7sUwPjftI0iFb"];  // Specific track URI
+    var trackUris = ["spotify:track:7yCF65vpc7sUwPjftI0iFb"];
     var data = {
         uris: trackUris,
         position: 0
@@ -181,9 +181,9 @@ async function addTracksToPlaylist() {
         console.log('Track added to playlist:', result);
     } catch (error) {
         console.error('Error adding tracks to playlist:', error);
-        // Additional error handling or logging can be added here
     }
 }
+
 
 $(document).ready(function() {
     // Attach event listener to logout button
