--- a/second_page.html
+++ b/second_page.html
@@ -125,7 +125,7 @@ function displayResults(mood, tracks) {
     $('#results').html(html);
 }
 
-async function addTracksToPlaylist() {
+function addTracksToPlaylist() {
     var playlistId = '7Fn5SdMYGiqLK9rtTfv0OJ';
     var token = sessionStorage.getItem('accessToken');
 
